--- a/components/container.html
+++ b/components/container.html
@@ -6,26 +6,7 @@
     <meta name="view-transition" content="same-origin" />
     <meta name="description" content="KvoLib Container Components" />
     <title>Container - KvoLib</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-    <style>
-      html,
-      body {
-        background: #000;
-        color: #fff;
-      }
-    </style>
-    <link rel="icon" type="image/png" href="/assets/img/icon.png" />
-    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <script src="/assets/js/head-loader.js"></script>
     <link rel="stylesheet" href="/assets/css/container.css" />
   </head>
   <body>
@@ -88,9 +69,9 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="centered-html">&lt;div class="container-centered"&gt;
+                    <pre>&lt;div class="container-centered"&gt;
   &lt;!-- Content here --&gt;
-&lt;/div&gt;</code></pre>
+&lt;/div&gt;</pre>
                   </div>
                   <div class="code-content" data-content="css">
                     <div class="code-header">
@@ -99,11 +80,11 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="centered-css">.container-centered {
+                    <pre>.container-centered {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 24px;
-}</code></pre>
+}</pre>
                   </div>
                 </details>
               </div>
@@ -138,9 +119,9 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="fluid-html">&lt;div class="container-fluid"&gt;
+                    <pre>&lt;div class="container-fluid"&gt;
   &lt;!-- Content here --&gt;
-&lt;/div&gt;</code></pre>
+&lt;/div&gt;</pre>
                   </div>
                   <div class="code-content" data-content="css">
                     <div class="code-header">
@@ -149,10 +130,10 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="fluid-css">.container-fluid {
+                    <pre>.container-fluid {
   width: 100%;
   padding: 0 24px;
-}</code></pre>
+}</pre>
                   </div>
                 </details>
               </div>
@@ -187,9 +168,9 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="narrow-html">&lt;div class="container-narrow"&gt;
+                    <pre>&lt;div class="container-narrow"&gt;
   &lt;!-- Content here --&gt;
-&lt;/div&gt;</code></pre>
+&lt;/div&gt;</pre>
                   </div>
                   <div class="code-content" data-content="css">
                     <div class="code-header">
@@ -198,11 +179,11 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="narrow-css">.container-narrow {
+                    <pre>.container-narrow {
   max-width: 768px;
   margin: 0 auto;
   padding: 0 24px;
-}</code></pre>
+}</pre>
                   </div>
                 </details>
               </div>
@@ -237,9 +218,9 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="wide-html">&lt;div class="container-wide"&gt;
+                    <pre>&lt;div class="container-wide"&gt;
   &lt;!-- Content here --&gt;
-&lt;/div&gt;</code></pre>
+&lt;/div&gt;</pre>
                   </div>
                   <div class="code-content" data-content="css">
                     <div class="code-header">
@@ -248,11 +229,11 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="wide-css">.container-wide {
+                    <pre>.container-wide {
   max-width: 1400px;
   margin: 0 auto;
   padding: 0 32px;
-}</code></pre>
+}</pre>
                   </div>
                 </details>
               </div>
@@ -262,7 +243,6 @@
     </section>
 
     <div data-include="assets/layout/footer.html"></div>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/scripts-loader.js"></script>
   </body>
 </html>
