--- a/components/skeleton.html
+++ b/components/skeleton.html
@@ -6,26 +6,7 @@
     <meta name="view-transition" content="same-origin" />
     <meta name="description" content="KvoLib Skeleton Components" />
     <title>Skeleton - KvoLib</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
-    <style>
-      html,
-      body {
-        background: #000;
-        color: #fff;
-      }
-    </style>
-    <link rel="icon" type="image/png" href="/assets/img/icon.png" />
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <script src="/assets/js/head-loader.js"></script>
     <link rel="stylesheet" href="/assets/css/skeleton.css" />
   </head>
   <body>
@@ -92,10 +73,10 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="text-html">&lt;div class="skeleton skeleton-title"&gt;&lt;/div&gt;
+                    <pre>&lt;div class="skeleton skeleton-title"&gt;&lt;/div&gt;
 &lt;div class="skeleton skeleton-text"&gt;&lt;/div&gt;
 &lt;div class="skeleton skeleton-text"&gt;&lt;/div&gt;
-&lt;div class="skeleton skeleton-text" style="width: 70%;"&gt;&lt;/div&gt;</code></pre>
+&lt;div class="skeleton skeleton-text" style="width: 70%;"&gt;&lt;/div&gt;</pre>
                   </div>
                   <div class="code-content" data-content="css">
                     <div class="code-header">
@@ -104,7 +85,7 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="text-css">.skeleton {
+                    <pre>.skeleton {
   background: linear-gradient(
     90deg,
     rgba(255, 255, 255, 0.05) 25%,
@@ -131,7 +112,7 @@
   height: 24px;
   width: 60%;
   margin-bottom: 16px;
-}</code></pre>
+}</pre>
                   </div>
                 </details>
               </div>
@@ -172,9 +153,9 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="avatar-html">&lt;div class="skeleton skeleton-avatar skeleton-avatar-sm"&gt;&lt;/div&gt;
+                    <pre>&lt;div class="skeleton skeleton-avatar skeleton-avatar-sm"&gt;&lt;/div&gt;
 &lt;div class="skeleton skeleton-avatar"&gt;&lt;/div&gt;
-&lt;div class="skeleton skeleton-avatar skeleton-avatar-lg"&gt;&lt;/div&gt;</code></pre>
+&lt;div class="skeleton skeleton-avatar skeleton-avatar-lg"&gt;&lt;/div&gt;</pre>
                   </div>
                   <div class="code-content" data-content="css">
                     <div class="code-header">
@@ -183,14 +164,14 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="avatar-css">.skeleton-avatar {
+                    <pre>.skeleton-avatar {
   width: 48px;
   height: 48px;
   border-radius: 50%;
 }
 
 .skeleton-avatar-sm { width: 32px; height: 32px; }
-.skeleton-avatar-lg { width: 64px; height: 64px; }</code></pre>
+.skeleton-avatar-lg { width: 64px; height: 64px; }</pre>
                   </div>
                 </details>
               </div>
@@ -225,7 +206,7 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="image-html">&lt;div class="skeleton skeleton-image"&gt;&lt;/div&gt;</code></pre>
+                    <pre>&lt;div class="skeleton skeleton-image"&gt;&lt;/div&gt;</pre>
                   </div>
                   <div class="code-content" data-content="css">
                     <div class="code-header">
@@ -234,11 +215,11 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="image-css">.skeleton-image {
+                    <pre>.skeleton-image {
   width: 100%;
   height: 200px;
   border-radius: 12px;
-}</code></pre>
+}</pre>
                   </div>
                 </details>
               </div>
@@ -277,7 +258,7 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="button-html">&lt;div class="skeleton skeleton-button"&gt;&lt;/div&gt;</code></pre>
+                    <pre>&lt;div class="skeleton skeleton-button"&gt;&lt;/div&gt;</pre>
                   </div>
                   <div class="code-content" data-content="css">
                     <div class="code-header">
@@ -286,11 +267,11 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="button-css">.skeleton-button {
+                    <pre>.skeleton-button {
   height: 40px;
   width: 120px;
   border-radius: 8px;
-}</code></pre>
+}</pre>
                   </div>
                 </details>
               </div>
@@ -333,12 +314,12 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="card-html">&lt;div class="skeleton-card"&gt;
+                    <pre>&lt;div class="skeleton-card"&gt;
   &lt;div class="skeleton skeleton-image"&gt;&lt;/div&gt;
   &lt;div class="skeleton skeleton-title"&gt;&lt;/div&gt;
   &lt;div class="skeleton skeleton-text"&gt;&lt;/div&gt;
   &lt;div class="skeleton skeleton-text"&gt;&lt;/div&gt;
-&lt;/div&gt;</code></pre>
+&lt;/div&gt;</pre>
                   </div>
                   <div class="code-content" data-content="css">
                     <div class="code-header">
@@ -347,12 +328,12 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="card-css">.skeleton-card {
+                    <pre>.skeleton-card {
   padding: 20px;
   background: rgba(255, 255, 255, 0.02);
   border: 1px solid rgba(255, 255, 255, 0.05);
   border-radius: 16px;
-}</code></pre>
+}</pre>
                   </div>
                 </details>
               </div>
@@ -398,13 +379,13 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="profile-html">&lt;div class="skeleton-profile"&gt;
+                    <pre>&lt;div class="skeleton-profile"&gt;
   &lt;div class="skeleton skeleton-avatar skeleton-avatar-lg"&gt;&lt;/div&gt;
   &lt;div class="skeleton-profile-info"&gt;
     &lt;div class="skeleton skeleton-title"&gt;&lt;/div&gt;
     &lt;div class="skeleton skeleton-text"&gt;&lt;/div&gt;
   &lt;/div&gt;
-&lt;/div&gt;</code></pre>
+&lt;/div&gt;</pre>
                   </div>
                   <div class="code-content" data-content="css">
                     <div class="code-header">
@@ -413,7 +394,7 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="profile-css">.skeleton-profile {
+                    <pre>.skeleton-profile {
   display: flex;
   gap: 16px;
   align-items: center;
@@ -421,7 +402,7 @@
 
 .skeleton-profile-info {
   flex: 1;
-}</code></pre>
+}</pre>
                   </div>
                 </details>
               </div>
@@ -478,13 +459,13 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="list-html">&lt;div class="skeleton-list-item"&gt;
+                    <pre>&lt;div class="skeleton-list-item"&gt;
   &lt;div class="skeleton skeleton-avatar"&gt;&lt;/div&gt;
   &lt;div class="skeleton-list-content"&gt;
     &lt;div class="skeleton skeleton-text"&gt;&lt;/div&gt;
     &lt;div class="skeleton skeleton-text"&gt;&lt;/div&gt;
   &lt;/div&gt;
-&lt;/div&gt;</code></pre>
+&lt;/div&gt;</pre>
                   </div>
                   <div class="code-content" data-content="css">
                     <div class="code-header">
@@ -493,7 +474,7 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="list-css">.skeleton-list-item {
+                    <pre>.skeleton-list-item {
   display: flex;
   gap: 12px;
   align-items: center;
@@ -506,7 +487,7 @@
 
 .skeleton-list-content {
   flex: 1;
-}</code></pre>
+}</pre>
                   </div>
                 </details>
               </div>
@@ -555,12 +536,12 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="paragraph-html">&lt;div class="skeleton-paragraph"&gt;
+                    <pre>&lt;div class="skeleton-paragraph"&gt;
   &lt;div class="skeleton skeleton-text"&gt;&lt;/div&gt;
   &lt;div class="skeleton skeleton-text"&gt;&lt;/div&gt;
   &lt;div class="skeleton skeleton-text"&gt;&lt;/div&gt;
   &lt;div class="skeleton skeleton-text"&gt;&lt;/div&gt;
-&lt;/div&gt;</code></pre>
+&lt;/div&gt;</pre>
                   </div>
                   <div class="code-content" data-content="css">
                     <div class="code-header">
@@ -569,11 +550,11 @@
                         <i class="fas fa-copy"></i> Copy
                       </button>
                     </div>
-                    <pre><code id="paragraph-css">.skeleton-paragraph {
+                    <pre>.skeleton-paragraph {
   display: flex;
   flex-direction: column;
   gap: 8px;
-}</code></pre>
+}</pre>
                   </div>
                 </details>
               </div>
@@ -583,8 +564,6 @@
     </section>
 
     <div data-include="assets/layout/footer.html"></div>
-
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="/assets/js/main.js"></script>
+    <script src="/assets/js/scripts-loader.js"></script>
   </body>
 </html>
